# GPUAtomicContention

./: .gitignore  LICENSE  Makefile  README.md  config.sh.example
benchmarks/: CMakeLists.txt
benchmarks/cmake/: helpers.cmake
benchmarks/include/: __atomic_amd_detail.hpp  __atomic_detail.hpp  __atomic_nvidia_detail.hpp  atomic.hpp  benchmarking.hpp  buffer.hpp  tests.hpp  utility.hpp
benchmarks/src/: atomics.cpp  barriers.cpp  benchmarking.cpp  contention.cpp  cross_gpu_atomics.cpp  globaltimer.cpp  gpu_cpu_atomics.cpp  utility.cpp
docker/: amd.Dockerfile  nvidia.Dockerfile
scripts/: build.sh  generate_nvidia_arch.sh  paper_plots.py  plot.sh  run_program_for_amd.sh  run_program_for_nvidia.sh  runner.sh
